--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,17 +4,10 @@
   {% include head.html %}
 
   <body>
-
+<div id="wrapper">
     {% include header.html %}
-
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
-
+	{% include container.html %}
     {% include footer.html %}
-
+</div>
   </body>
-
 </html>
