--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,10 +4,22 @@
   {% include head.html %}
 
   <body>
-<div id="wrapper">
+
     {% include header.html %}
-	{% include container.html %}
+
+    <div class="page-content">
+      <div class="wrapper">
+        <div class="col-main">
+          {{ content }}
+        </div>
+        <div class="col-second">
+          {% include sidebar.html %}
+        </div>
+      </div>
+    </div>
+
     {% include footer.html %}
-</div>
+
   </body>
+
 </html>
