--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,4 +42,9 @@
 	})();
 	</script>
 
+	{% if jekyll.environment == 'production' and site.google_analytics %}
+        {% include google-analytics.html %}
+        {% endif %}
+
+
 </head>
